# awakening

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  [debug]  aaa.cpp  run.sh  web.py
.cache/clangd/index/: a.cpp.427CE03A1EA57CDD.idx  a.cpp.C10246AD5FA16304.idx  adaptive_extended_kalman_filter.hpp.A170016F3DE45227.idx  admm.cpp.6AC1DA3C075CA96A.idx  admm.hpp.E95F0ADF687DD1B7.idx  angles.h.55DA1BA443E48126.idx  armor_detector_base.hpp.C50E68C583B6FC41.idx  armor_detector_common.cpp.52A1A17BE306595B.idx  armor_detector_common.hpp.F4E6F3F8472A5848.idx  armor_detector_factory.hpp.12DE1D558729636D.idx  armor_detector_ncnn.cpp.6A1A578CE1A1AA32.idx  armor_detector_onnxruntime.cpp.D3BA3B8BDD3E039D.idx  armor_detector_onnxruntime.hpp.85E35E6BF615593F.idx  armor_detector_opencv.cpp.F11DD9A3E26D9E9C.idx  armor_detector_opencv.hpp.98DA6E3D03682876.idx  armor_detector_openvino.cpp.48E16F0311640A24.idx  armor_detector_openvino.hpp.5FF4FFAED0ED8767.idx  armor_detector_tensorrt.cpp.08BFA06C8F5F802C.idx  armor_detector_tensorrt.hpp.998C9F8AFBF8B823.idx  armor_infer.cpp.98F792484CCEC3B9.idx  armor_infer.cu.11AAD6E3CD7D9124.idx  armor_infer.hpp.55B4238C90B03209.idx  armor_infer.hpp.7CD5D666316C9CC0.idx  armor_omni.cpp.65A251B8698F116A.idx  armor_omni.hpp.AD01CEF1FD349560.idx  armor_where.cpp.EFBE11B426514093.idx  armor_where.hpp.8AC106B4A8C256BE.idx  auto_aim_fsm.hpp.CA0ACF0C97533BCC.idx  base.hpp.2A5DF507FB0E1A4C.idx  camera.hpp.0EEC6AD314619670.idx  codegen.cpp.E9C846D138095296.idx  codegen.hpp.D19B2A4042414222.idx  common.hpp.FB978047E7811258.idx  config.hpp.8E5810050982DA86.idx  debug.cpp.A5E50EBCE7713BE7.idx  debug.hpp.CFE7D20D7E8AE2EE.idx  error.hpp.E644CF54315B8080.idx  error_state_extended_kalman_filter.hpp.461A9112697CB65D.idx  extended_kalman_filter.hpp.6DCC98F0ACE88166.idx  factory.hpp.2F00B102BBFC06C7.idx  (+29 more)
config/: auto_aim.yaml  camera.yaml  omni.yaml  robot.yaml  standard.yaml  test.yaml
runtime/: auto_aim.cpp
script/: setup_service.sh  setup_service_sentry.sh
src/: common.hpp  config.hpp  param_deliver.h.in
src/_rcl/: node.hpp  tf.hpp
src/_rcl/visual/: armor.hpp  armor_target.hpp
src/base/: camera.hpp  robot.hpp
src/io/core/: buffer.hpp  crc.cpp  crc.hpp  factory.hpp  packet.hpp  tags.hpp  thread_safe_queue.hpp
src/io/gimbal/: gimbal.cpp  gimbal.hpp  gimbal_protocol.hpp
src/io/protocol/: message_base.hpp  message_types.hpp
src/io/serial/: async_serial.cpp  async_serial.hpp  serial_interface.hpp  sim_serial.cpp  sim_serial.hpp
src/runtime/: auto_aim.cpp
src/tasks/auto_aim/: auto_aim.hpp  auto_aim_fsm.hpp  debug.cpp  debug.hpp  type.cpp  type.hpp
src/tasks/auto_aim/armor_control/: very_aimer.cpp  very_aimer.hpp
src/tasks/auto_aim/armor_detect/: armor_detector.cpp  armor_detector.hpp  armor_detector_base.hpp  armor_detector_common.cpp  armor_detector_common.hpp  armor_detector_factory.hpp  armor_infer.cpp  armor_infer.hpp
src/tasks/auto_aim/armor_detect/ncnn/: armor_detector_ncnn.cpp  armor_detector_ncnn.hpp
src/tasks/auto_aim/armor_detect/number_classifier/: base.hpp  factory.hpp  number_classifier.cpp  number_classifier.hpp  number_classifier_trt.cpp  number_classifier_trt.hpp
src/tasks/auto_aim/armor_detect/onnxruntime/: armor_detector_onnxruntime.cpp  armor_detector_onnxruntime.hpp
src/tasks/auto_aim/armor_detect/opencv/: armor_detector_opencv.cpp  armor_detector_opencv.hpp
src/tasks/auto_aim/armor_detect/openvino/: armor_detector_openvino.cpp  armor_detector_openvino.hpp
src/tasks/auto_aim/armor_detect/tensorrt/: armor_detector_tensorrt.cpp  armor_detector_tensorrt.hpp
src/tasks/auto_aim/armor_tracker/: armor_target.cpp  armor_target.hpp  armor_tracker.cpp  armor_tracker.hpp  motion_model.hpp  motion_model_point.hpp
src/tasks/base/: ballistic_trajectory.hpp  common.hpp  packet_typedef.hpp  recorder_player..hpp  traj.hpp  web.hpp
src/utils/: buffer.hpp  impl.hpp  logger.hpp  runtime_tf.hpp  signal_guard.hpp  tf.hpp  utils.hpp
src/utils/common/: image.hpp  type_common.hpp
src/utils/cuda/: letter_box.cu
src/utils/drivers/: hik_camera.hpp
src/utils/net_detector/: net_detector_base.hpp
src/utils/net_detector/openvino/: net_detector_openvino.cpp  net_detector_openvino.hpp
src/utils/net_detector/tensorrt/: net_detector_tensorrt.hpp
src/utils/scheduler/: node.hpp  scheduler.hpp
templates/: index.html
test/: a.cpp
